--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Sanjeev Kumar Maddukuri",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "mongoose": "^9.1.1",
     "nodemon": "^3.1.11",
